--- a/index.css
+++ b/index.css
@@ -1,43 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  font-family: "PT Sans", "Lato", Calibri, sans-serif;
+}
+
+:root {
+  --header-bg-color: rgb(1, 163, 144);
+  --footer-bg-color: rgb(1, 163, 144);
+  --body-bg-color: #e3e3e3;
+  --input-bg: #f2f2f2;
+  --input-bg-focus: #dbdbdb;
+  --text-color: #000;
+  --light-green: #00ad1d;
+  --dark-green: #016034;
+  --orange: #d97919;
+  --light-orange: #ffaf60;
+  --dark-orange: #c26100;
+  --x-dark-orange: rgb(157, 42, 1);
+  --light-red: rgb(236, 56, 56);
+  --white: #fff;
+  --light-black: rgb(23, 23, 23);
+  --light-blue: #0463ac;
+  --dark-blue: #070062;
+}
+
 .header {
-    display: flex;
-    align-items: center;
+    background-color: aliceblue;
+    color: var(--light-text-color);
+    z-index: 999;
+    border-radius: 5px;
     justify-content: space-between;
-    border: 2px solid;
+    align-items: center;
+    width: 100vw;
+    height: 80px;
+    font-weight: 700;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow-y: hidden;
+    box-shadow: -2px 7px 5px -6px rgba(0, 0, 0, .61);
 }
 .logo {
-    width: 200px;
-    height: 200px;
+    width: 90px;
+    padding: 10px 0 10px 15px;
 }
 .nav-item {
     padding: 0px 20px;
 }
 
 .nav-item > ul {
-    font-size: 24px;
-    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 30px;
     list-style-type: none;
+    display: flex;
 }
 .nav-item > ul > li {
     padding: 10px;
-    margin: 10px;
 }
 .restaurent-container {
-    display: flex;
     flex-wrap: wrap;
-}
-.res-logo{
-    width: 100%;
+    justify-content: center;
+    align-self: stretch;
+    align-items: center;
+    width: auto;
+    display: flex
 }
 .res-card {
-    padding: 20px;
-    margin: 10px;
-    width: 200px;
-    height: 450px;
-    background-color: #f0f0f0;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 240px;
+    margin: 20px;
+    padding: 10px;
+    box-shadow: -1px 5px 10px 5px rgba(112, 112, 112, .2);
+    height: -webkit-fill-available;
+}
+.res-card > span {
+    text-align: center;
+    justify-content: space-between;
+    margin-top: 8px;
+    display: flex
+}
+.res-logo{
+    border-radius: 10px;
+    width: 100%;
+    height: 50%;
 }
 .res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
+    transform: scale(1.03);
 }
 .filter-btn {
     margin: 10;
@@ -56,4 +115,58 @@
 .login-btn {
     padding: 0 20px;
     cursor: pointer;
+}
+.search-container{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 130px auto 20px;
+    display: flex;
+}
+.search-container .search-input {
+    width: 40%;
+  box-sizing: border-box;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+  padding: 14px 15px 14px 20px;
+  border: 1px solid #aabcca;
+  border-right: 0;
+  color: var(--text-color);
+  outline: none;
+}
+.search-btn {
+    background-color: orange;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    outline: none;
+    margin-left: -4px;
+    padding: 12px 22px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .08);
+}
+.menuPage {
+    padding: 130px 20px;
+}
+.aboutus-container{
+    padding: 130px 20px;
+}
+.contactus-container {
+    padding: 130px 20px;
+}
+.Online-status-Page {
+    padding: 130px 20px;
+}
+.grocery-bundle{
+    padding: 130px 20px;
+}
+.toprated-btn{
+    border: 1px solid;
+    border-radius: 15px;
+    margin-left: 20px;
+    background-color: aliceblue;
+    --text-color: white;
 }
